sign-up-form/styles.css
@font-face {
    font-family: 'Norse';
    src: url('./assets/fonts/subset-Norse-Bold.woff2') format('woff2'), url('./assets/fonts/subset-Norse-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Norse';
    src: url('./assets/fonts/subset-Norse.woff2') format('woff2'),
        url('./assets/fonts/subset-Norse.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

body {
    margin: 0;
    height: 100vh;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.sign-up-layout {
    display: flex;
    height: 100%;
}

.sign-up-visual {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
    flex: 1;
    background-image: url("./assets/images/halie-west-foliage.jpg");
    background-size: cover;
    background-position: center;
}

.branding-logo {
    display: flex;
    margin: 200px 0;
    align-items: center;
    justify-content: center;
    gap: 15px;
    /* top: 20%; */
    /* left: 0; */
    background-color: rgba(0, 0, 0, 0.5);
    padding: 1rem;
}

.branding-logo img {
    max-width: 50px;
    height: auto;
}

.logo-text {
    font-family: "Norse", sans-serif;
    font-weight: bold;
    font-size: 3rem;
    color: white;
}

.photo-credit {
    text-align: center;
    bottom: 10px;
    color: white;
    font-size: 0.7rem;
    background-color: rgba(0, 0, 0, 0.3);
    padding: 2px 5px;
}

.photo-credit>a {
    text-decoration: underline;
    color: white;
}

.sign-up-content {
    flex: 1;
    background-color: #d9d9d9; 
    display: flex;
    flex-direction: column;
    justify-content: center; /* Vertically centers the form */
    padding: 0; /* Gets plastered wide, not like a sep.box */
}

.sign-up-form {
    background-color: white; 
    padding: 2rem;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
}

.sign-up-header {
    font-weight: bold;
    color: black;
    padding: 0 2rem;
    margin-bottom: 2rem;
    max-width: 500px;
}

.form-row {
    display: grid;
    grid-template-columns: 1fr 1fr; /* Splits the row into 2 equal parts */
    gap: 20px;
    margin-bottom: 15px;
}

.field-group {
    display: flex;
    flex-direction: column; /* Puts the label on top of the input */
}

label {
    text-transform: uppercase;
    font-size: 0.75rem; 
    color: #868686;   
    font-weight: 800;  
    letter-spacing: 0.05rem;
    margin-bottom: 5px;
}

input {
    border: 1px solid #E5E7EB;
    border-radius: 4px;
    padding: 8px;
}

input:focus {
    border-left: 5px solid #596D48; /* Highlight when clicking into it */
    outline: none;
}

input:user-invalid {
    border: 1px solid red; /* The "error" state */
}

button {
    background-color: #596D48;
    color: white;
    padding: 10px 20px;
    border: none;
    margin: 0 2rem;
    max-width: 150px;
    border-radius: 5px;
    font-weight: bold;
    cursor: pointer;
}

.login-link {
    padding: 0 2rem;
}

.login-link a {
    color: #596D48;        
    text-decoration: none;
    border-bottom: 1px dashed #596D48; 
    font-weight: bold;
}

.login-link a:hover {
    border-bottom: 1px solid #596D48; /* Turns solid on hover */
}

.form-footer {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    max-width: 600px;
}

